Change title to 'Cosmic 8-Ball' and update heading
Updated title and heading text in index.html.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic 8-Ball</title>
+    <title>Cosmic 8-Ball</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Initial style for the number 8, making it white to match the inner circle background */
+        .answer {
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Click the 8-Ball for Advice!</h1>
+        <h1>ShutUp Nigger</h1>
         <div id="eight-ball" class="eight-ball">
             <div class="inner-circle">
                 <p id="answer" class="answer">8</p>
