Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>ShutUp Nigger</h1>
+        <h1>Don't click for advice</h1>
         <div id="eight-ball" class="eight-ball">
             <div class="inner-circle">
                 <p id="answer" class="answer">8</p>
